corpus/program.txt
==================
Excerpt from a real rosetta program
==================

INCLUDE ran4.seq

100      CONSTANT #drawers
#drawers CONSTANT #players

CREATE drawers  #drawers CELLS ALLOT                    \ index 0..#drawers-1

: drawer[]                              ( n -- addr )   \ return address of drawer n
    CELLS drawers +
;

---

(source_file
  (word)
  (word)
  (number)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (comment)
  (word_definition
    (start_definition)
    (word)
    (stack_effects
      (lparen)
      (word)
      (stack_effect_sep)
      (word)
      (rparen))
    (comment)
    (word)
    (word)
    (word)
    (end_definition)))
