test/corpus/basic.txt
==================
Basic operands and stack
==================

1 2 + 3 - 4 * 5 /
---

(source_file
  (number)
  (number)
  (builtin
    (operator))
  (number)
  (builtin
    (operator))
  (number)
  (builtin
    (operator))
  (number)
  (builtin
    (operator)))
